--- a/package.json
+++ b/package.json
@@ -4,17 +4,36 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start:frontend": "cd frontend && npm run dev",
+    "start:electron": "electron .",
+    "start": "concurrently \"npm run start:frontend\" \"npm run start:electron\"",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "keywords": [],
   "author": "Omkar Iyer",
   "license": "ISC",
   "description": "A cross-platform desktop bookmark manager app using Electron, MERN stack, and Tailwind CSS for managing tasks with CRUD operations and file uploads.",
   "devDependencies": {
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
+    "concurrently": "^9.0.0",
     "electron": "^32.0.2"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "sqlite3": "^5.1.7"
+    "electron-squirrel-startup": "^1.0.1",
+    "sqlite3": "^5.1.7",
+    "update-electron-app": "^3.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/omkar-4/distraction_bookmarks"
   }
 }
