--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "distraction_bookmarks",
-  "version": "1.0.2",
+  "version": "1.0.",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:frontend": "cd frontend && npm run dev",
     "start:electron": "electron .",
-    "start": "concurrently \"npm run start:frontend\" \"npm run start:electron\"",
+    "start:dev": "concurrently \"npm run start:frontend\" \"npm run start:electron\"",
+    "start:prod": "npm run start:electron",
     "package": "electron-forge package",
     "make:frontend": "cd frontend && npm run build && cd ..",
     "make": "npm run make:frontend && electron-forge make"
