--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "distraction_bookmarks",
-  "version": "1.0.",
+  "version": "1.0.5",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -31,6 +31,7 @@
   "publish": {
     "provider": "github",
     "owner": "omkar-4",
+    "repo": "distraction_bookmarks",
     "releaseType": "release"
   },
   "keywords": [],
