--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "distraction_bookmarks",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "main.js",
   "scripts": {
     "start:frontend": "cd frontend && npm run dev",
@@ -46,6 +46,7 @@
     "@electron-forge/maker-zip": "^7.4.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
     "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron-forge/publisher-github": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "concurrently": "^9.0.0",
     "electron": "^32.0.2",
